--- a/vidsthreads/doc.html
+++ b/vidsthreads/doc.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<base href="../../ikneedata/">
+<base href="../../">
 <link href='http://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
 <script src="jquery-1.11.3.js" type="text/javascript"></script>
