--- a/index.html
+++ b/index.html
@@ -51,7 +51,15 @@
 </div>
 
 <div id="side-container">
-	<div id="ad">Ads</div>
+	<div id="ad"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- ikneedatabanner -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:600px"
+     data-ad-client="ca-pub-2776548052186122"
+     data-ad-slot="7967934690"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>
     <h2>Suggestions</h2>
     <div id="sugboxcontainer"><div id="suggestiontext"><p>Have a suggestion of what
     features to create next?
