--- a/index.html
+++ b/index.html
@@ -71,12 +71,5 @@
 </div>
 </div>
 
-</div>
-
-
-
-<div id="footer">
-  <p>Copyright Ikneedata.com 2015 or summin</p>
-</div>
-</body>
+</div></body>
 </html>
