little text edit

--- a/donate.html
+++ b/donate.html
@@ -46,8 +46,7 @@
 		<div>
 			<p><br>Donations will:</p>
 			<ul>
-				<li>Give you access to beta builds of new features</li>
-				<li>Help pay for server costs</li>
+				<li>Give you access to beta builds of new features (1$ or more)</li>
     		<li>Drive the site and brand forward</li>
 				<li>Potentially allow the site to become ad free</li>
 			</ul>
