--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <p>I will use this blog section to talk about new apps and infographs, some recent melee mechanic documentation I, or someone else has done, or just general site announcements.</p>
 
-<p>Just want to briefly mention that I am paying for server costs out of my own pocket, so I have a couple little ads on the side and turning off adblock would help me out with that, or if you want to support me even more, you could donate.</p>
+<p>Just want to briefly mention that I have a couple little ads on the side and turning off adblock would help me out with that, or if you want to support me even more, you could donate.</p>
 
 <p>- Schmoo <img src="assets/docicon.png" width="21" height="24" alt=""/></p>
 </div>
