--- a/about.html
+++ b/about.html
@@ -49,11 +49,8 @@
 			<a href="http://smashlounge.com"><li style="color:#3CE4B2"><img src="assets/slicon.jpg" style="margin:5px;border-radius:3px;"/>SmashLounge</li></a>
 			<a href="https://www.youtube.com/user/meleemechanics"><li><img src="assets/kadicon.jpg" style="margin:5px;border-radius:3px;"/>Kadano's Melee Mechanics</li></a>
 			<a href="http://smashdatabase.com"><li style="color:#6EBEFF;"><img src="http://smashdatabase.com/uploads/fufu/logo__53e947d79385fo_18v3k01j5jfe1pjfth91b19ms7.png"width="20px" height="20px" style="margin:5px;"/>SmashDatabase</li></a>
+			<a href="http://smash.gg"><li style="color:#e34444;"><img src="assets/smashggicon.png" style="margin:5px;border-radius:3px;"/>Smash.gg</li></a>
 			</ul>
-
-
-			<p>Special thanks<br>
-			Coilerr OpieOP, Luke994, Bobojack, Substitute_jiji, Kadano, TauKhan, Magus, Strong_Bad, Hectohertz, PerhapsMan, MeleeMewtwo, Achilles, Stratocaster, Sycorax83</p>
 
 		</div>
 	</div>
