--- a/graphsgfys/falcon.html
+++ b/graphsgfys/falcon.html
@@ -43,7 +43,7 @@
 <div id="ig-content">
 <div class="ig gfyinside1">
 
-<div class="graphcontainer">
+<div class="graphcontainer media-flex">
 <img class="gfyitem" data-id="MixedAliveAnaconda" />
 </div>
 <div class="ig-text">
