--- a/graphsgfys/falcon.html
+++ b/graphsgfys/falcon.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <base href="../../">
-<script>var noofgfys = 1;</script>
+<script>var noofgfys = 1;var ratios = [(522/500)];</script>
 <link href='http://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
 <script src="jquery-1.11.3.js" type="text/javascript"></script>
