--- a/graphsgfys/luigi.html
+++ b/graphsgfys/luigi.html
@@ -6,6 +6,16 @@
 <script>var noofgfys = 1;</script>
 <link href='http://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-65409082-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <script src="jquery-1.11.3.js" type="text/javascript"></script>
 <script type="text/javascript" src="script.js"></script>
 <link rel="shortcut icon" href="favicon.ico" />
