--- a/graphsgfys/falcon.html
+++ b/graphsgfys/falcon.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<base href="../../">
-<script>var noofgfys = 1;var ratios = [(522/500)];</script>
+<base href="../">
+<script>var noofgfys = 1;var ratios = [(500/522)];</script>
 <link href='http://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
 <script>
