--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<base href="../">
+<base href="">
 <link href='http://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
 <script>
