--- a/graphsgfys/peach.html
+++ b/graphsgfys/peach.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<base href="../../">
+<base href="../">
 <script>var noofgfys = 1;</script>
 <link href='http://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
