--- a/graphsgfys.html
+++ b/graphsgfys.html
@@ -15,7 +15,7 @@
   ga('send', 'pageview');
 
 </script>
-<script>var noofgfys = 2;</script>
+<script>var noofgfys = 2;var ratios = [(412/550),(500/522)];</script>
 <script src="jquery-1.11.3.js" type="text/javascript"></script>
 <script type="text/javascript" src="script.js"></script>
 <link rel="shortcut icon" href="favicon.ico" />
@@ -54,7 +54,7 @@
 
 <div class="ig gfyinside1">
 
-<div class="graphcontainer">
+<div class="graphcontainer media-flex">
 <img class="gfyitem" data-id="ResponsibleShamefulIndri" />
 </div>
 <div class="ig-text">
@@ -67,7 +67,7 @@
 
 <div class="ig gfyinside2">
 
-<div class="graphcontainer">
+<div class="graphcontainer media-flex">
 <img class="gfyitem" data-id="MixedAliveAnaconda" />
 </div>
 <div class="ig-text">
