--- a/graphsgfys/peach.html
+++ b/graphsgfys/peach.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <base href="../">
-<script>var noofgfys = 1;</script>
+<script>var noofgfys = 1;var ratios = [(412/550)];</script>
 <link href='http://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
 <script>
@@ -53,7 +53,7 @@
 <div id="ig-content">
 <div class="ig gfyinside1">
 
-<div class="graphcontainer">
+<div class="graphcontainer media-flex">
 <img class="gfyitem" data-id="DefiantLinearBlacklemur" />
 </div>
 <div class="ig-text">
