--- a/graphsgfys/sheik.html
+++ b/graphsgfys/sheik.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <base href="../">
-<script>var noofgfys = 1;</script>
+<script>var noofgfys = 1;var ratios = [(1000/520)];</script>
 <link href='http://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
 <script>
@@ -52,7 +52,7 @@
 </div>
 
 <div id="ig-content">
-<div class="ig gfyinside1">
+<div class="ig gfyinside1 media-flex">
 
 <div class="graphcontainer">
 <img class="gfyitem" data-id="WarpedMelodicClownanemonefish" />
