--- a/heatmaps/oos/marth.html
+++ b/heatmaps/oos/marth.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <base href="../../">
-<link href='http://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Slabo+27px|Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
