--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
   <a href="vidsthreads.html"><div class="button longbutton"><h4>Vids & Threads</h4></div></a>
 	<a href="donate.html"><div class="button"><h4>Donate</h4></div></a>
 	<a href="about.html"><div class="button"><h4>About</h4></div></a>
-
+	<div id="socialmediaicons"><a href="http://twitter.com/IKneeData"><div class="socialmedia" style="background-image:url(assets/twitterlogo.png)"></div></a>
+	<a href="http://facebook.com/IKneeData"><div class="socialmedia" style="background-image:url(assets/facebooklogo.png)"></div></a></div>
 </div>
 <div id="pagetitle" style="background-color:#AC2629">
 <h1>Blog</h1></div>
