--- a/donate.html
+++ b/donate.html
@@ -63,6 +63,7 @@
 				<li>Potentially allow the site to become ad free</li>
 			</ul>
 			<p>Site suggestions made by donaters will be taken very seriously and I will discuss them with you.</p>
+			<p><span style="font-size:12px">Please provide preferred contact details in donation message, otherwise paypal associated email address will be used</span></p>
 			<p><br>Thank You!<br></p>
 		</div>
 	</div>
