--- a/heatmaps/oos/ics.html
+++ b/heatmaps/oos/ics.html
@@ -37,9 +37,10 @@
 <div id="pagetitle" style="background-color:#5F369F">
 <h1>Heatmaps <img id="heatmapinfo" src="assets/question.png" style="height:22px; width:22px; border-radius:15px;"/></h1>
 
-<div id="heatmapinfobox"><p>Heatmaps display the speed of all the character's attacks from a certain position. The coloured shapes represent the hitboxes of each attack, where the colour represents the frame that it comes out. All smash games run at 60 frames per second. Red and yellow hitboxes are very fast, but green and blue are slower. Each hitbox shape is a combination of the furthest you can move forwards before the hitbox is out, how much you can move backwards, and all the space in between.</p>
+<div id="heatmapinfobox"><p>Heatmaps display the speed of all the character's attacks from a certain position. The coloured shapes represent the possible hitboxes of each attack, where the colour represents the frame that it comes out. All smash games run at 60 frames per second. Red and yellow hitboxes are very fast, but green and blue are slower.</p>
 	<p>You can toggle each attack, or each frame (colour) individually, to allow you to see only the options you want. You can also play an animation of your selected hitboxes in real game speed (60fps) to get a feel for how fast each option is.</p>
-	<p>Hovering over the buttons will highlight (darkens them) the button's respective hitboxes. - may not work for all browsers.</p>
+	<p>Using the hurtbox controls, you can move around a custom opponent hurtbox to greater visualise hitbox range.</p>
+	<p>Hovering over the buttons will highlight (darkens them) the button's respective hitboxes.</p>
 </div>
 </div><div id="main">
 <div id="main-content">
