--- a/graphsgfys/mario.html
+++ b/graphsgfys/mario.html
@@ -43,12 +43,14 @@
 <div id="infographmain">
 <div id="button-container">
 <a href="graphsgfys.html"><div class="ig-button"><p>General</p></div></a>
+<a href="graphsgfys/marth.html"><div class="ig-button"><p>Marth</p></div></a>
 <a href="graphsgfys/sheik.html"><div class="ig-button"><p>Sheik</p></div></a>
 <a href="graphsgfys/peach.html"><div class="ig-button"><p>Peach</p></div></a>
 <a href="graphsgfys/falcon.html"><div class="ig-button"><p>Falcon</p></div></a>
 <a href="graphsgfys/doc.html"><div class="ig-button"><p>Doc</p></div></a>
 <a href="graphsgfys/luigi.html"><div class="ig-button"><p>Luigi</p></div></a>
 <a href="graphsgfys/mario.html"><div class="ig-button  igselected"><p>Mario</p></div></a>
+<a href="graphsgfys/yoshi.html"><div class="ig-button"><p>Yoshi</p></div></a>
 </div>
 
 <div id="ig-content" class="mario">
