--- a/graphsgfys/marth.html
+++ b/graphsgfys/marth.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <base href="../">
-<script>var noofgfys = 1;var ratios = [(414/550)];</script>
+<script>var noofgfys = 1;var ratios = [(456/1436)];</script>
 <link href='http://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
 <script>
@@ -44,12 +44,12 @@
 <div id="infographmain">
 <div id="button-container">
 <a href="graphsgfys.html"><div class="ig-button"><p>General</p></div></a>
-<a href="graphsgfys/marth.html"><div class="ig-button"><p>Marth</p></div></a>
+<a href="graphsgfys/marth.html"><div class="ig-button igselected"><p>Marth</p></div></a>
 <a href="graphsgfys/sheik.html"><div class="ig-button"><p>Sheik</p></div></a>
 <a href="graphsgfys/peach.html"><div class="ig-button"><p>Peach</p></div></a>
 <a href="graphsgfys/falcon.html"><div class="ig-button"><p>Falcon</p></div></a>
 <a href="graphsgfys/doc.html"><div class="ig-button"><p>Doc</p></div></a>
-<a href="graphsgfys/luigi.html"><div class="ig-button igselected"><p>Luigi</p></div></a>
+<a href="graphsgfys/luigi.html"><div class="ig-button"><p>Luigi</p></div></a>
 <a href="graphsgfys/mario.html"><div class="ig-button"><p>Mario</p></div></a>
 <a href="graphsgfys/yoshi.html"><div class="ig-button"><p>Yoshi</p></div></a>
 </div>
@@ -58,21 +58,13 @@
 <div class="ig gfyinside1">
 
 <div class="graphcontainer media-flex">
-<img class="gfyitem" data-id="SpiritedCornyAnole" />
+<img class="gfyitem" data-id="UnsungImpressionableApe" />
 </div>
 <div class="ig-text">
-<p><b>Luigi Rising Cyclone Heights</b></p>
-<p>This gfycat shows the various heights Luigi can gain from his rising cyclone by mashing the b button during the animation.</p>
+<p><b>Dancing Blade Attack Options</b> by <span class="author">lucatron</span></p>
 
-<p>Each #Press represents a cyclone with that amount of B presses within the animation (mashing window is between frame 6-43, and the whole animation lasts 79 frames). Luigi is shown on the first frame of his doublejump which is performed the first frame possible after cyclone. This allows us to see the true height gained from the starting position.</p>
 
-<p>Frame 6 of the cyclone is also labeled, this is because his cyclone has a downward movement at the start until frame 6, Luigi cannot mash during this time.</p>
-
-<p>To perform a rising cyclone, Luigi must first perform a cyclone on the ground. This is known as charging, and the exact details of this can be found by clicking more info.</p>
-
-<a href="http://smashboards.com/threads/rising-cyclone-ptp-frame-data-guide.384946/"><p style="color:#95E7D9"><b>More info</b></p></a>
-
-<a href="http://gfycat.com/InformalZestyDove"><div class="fullsize">Full size gfy</div></a>
+<a href="http://gfycat.com/UnsungImpressionableApe"><div class="fullsize">Full size gfy</div></a>
 </div></div></div>
 </div>
 
