--- a/vidsthreads.html
+++ b/vidsthreads.html
@@ -65,10 +65,21 @@
 <div class="graphcontainer"  id="vid2">
 <iframe class="vid2" width="550" height="309" src="https://www.youtube.com/embed/MOlQv-9S1zE?rel=0" frameborder="0" allowfullscreen></iframe></div>
 <div class="ig-text">
-<p><b>Melee Mechanics by Kadano | Hitbox interaction in SSBM</b></p>
+<p><b>Melee Mechanics by Kadano | Hitbox interaction in SSBM</b> by <span class="author">Kadano</span><a href="https://www.patreon.com/kadano"><img src="assets/patreonicon.png" class="authoricon"></a><a href="https://twitter.com/kadano"><img src="assets/twittericon.png" class="authoricon"></a><a href="http://www.twitch.tv/kadano92"><img src="assets/twitchicon2.png" class="authoricon"></a></p>
 <p>The latest video from Kadano's Youtube series Melee Mechanics. Kadano produces incredibly high quality videos detailing the inner mechanics of melee. Each video covers a few topics, and start with core mechanics for the rest of the video to build upon and help piece together.</p>
 
 <a href="https://www.youtube.com/user/meleemechanics"><div class="fullsize">YT Channel</div></a>
+</div></div>
+
+<div class="ig">
+
+<div class="graphcontainer">
+<a href="https://www.reddit.com/r/smashbros/wiki/bkam" width="550" height="385"><img src="assets/threads/movementanalysis.png" width="550" height="385" alt=""/></div></a>
+<div class="ig-text">
+<p><b>Better Know A Matchup (BKAM)</b> by <span class="author">DJLO</span></p>
+<p>A massive collection of character specific gifs+gfys for every character, detailing crucial tech and attributes. Each gif packaged with a discussion thread.</p>
+
+<a href="https://www.reddit.com/r/smashbros/wiki/bkam"><div class="fullsize">Full thread</div></a>
 </div></div>
 
 <div class="ig">
