--- a/vidsthreads/marth.html
+++ b/vidsthreads/marth.html
@@ -55,7 +55,7 @@
 <div class="graphcontainer">
 <a href="http://smashboards.com/threads/kadano%E2%80%99s-perfect-marth-class%E2%80%94advanced-frame-data-application.337035/"><img src="assets/threads/perfectmarthclass.jpg" width="550" height="385" alt=""/></div></a>
 <div class="ig-text">
-<p><b>Kadano's Perfect Marth Class</b></p>
+<p><b>Kadano's Perfect Marth Class</b> by <span class="author">Kadano</span><a href="https://www.patreon.com/kadano"><img src="assets/patreonicon.png" class="authoricon"></a><a href="https://twitter.com/kadano"><img src="assets/twittericon.png" class="authoricon"></a><a href="http://www.twitch.tv/kadano92"><img src="assets/twitchicon2.png" class="authoricon"></a></p>
 <p>The definitive frame data guide! Kadano's Perfect Marth Class is the best frame data application guide available, and should be bookmarked by every Marth main. The Class does not just explain how an AT works, but instead explains how it works in common situations, and concludes the most optimal method for each topic. Kadano does all this with high quality edited gfys and images.</p>
 
 <a href="http://smashboards.com/threads/kadano%E2%80%99s-perfect-marth-class%E2%80%94advanced-frame-data-application.337035/"><div class="fullsize">Full thread</div></a>
