--- a/vidsthreads/yoshi.html
+++ b/vidsthreads/yoshi.html
@@ -55,7 +55,7 @@
 <div class="graphcontainer">
 <a href="http://smashboards.com/threads/some-yoshi-information.351635/"><img src="assets/threads/yoshiinfo.jpg" width="550" height="385" alt=""/></div></a>
 <div class="ig-text">
-<p><b>Some Yoshi Information by PerhapsMan</b></p>
+<p><b>Some Yoshi Information</b> by <span class="author">PerhapsMan</span><a href="https://www.youtube.com/channel/UCD6tIJJBphnkLUnlLwQoKag"><img src="assets/youtubeicon.png" class="authoricon"></a></p>
 <p>A huge collection of Yoshi frame data, ranging from advanced tech to action states. This is the definitive learning resource for yoshi mains. PerhapsMan has uncovered a vast amount of yoshi nuances that all yoshis should know about.</p>
 <a href="http://smashboards.com/threads/some-yoshi-information.351635/"><div class="fullsize">Full thread</div></a>
 </div></div></div>
