--- a/graphsgfys.html
+++ b/graphsgfys.html
@@ -15,7 +15,7 @@
   ga('send', 'pageview');
 
 </script>
-<script>var noofgfys = 2;var ratios = [(412/550),(500/522)];</script>
+<script>var noofgfys = 3;var ratios = [(412/550),(568/1600),(500/522)];</script>
 <script src="jquery-1.11.3.js" type="text/javascript"></script>
 <script type="text/javascript" src="script.js"></script>
 <link rel="shortcut icon" href="favicon.ico" />
@@ -44,12 +44,14 @@
 <div id="infographmain">
 <div id="button-container">
 <a href="graphsgfys.html"><div class="ig-button igselected"><p>General</p></div></a>
+<a href="graphsgfys/marth.html"><div class="ig-button"><p>Marth</p></div></a>
 <a href="graphsgfys/sheik.html"><div class="ig-button"><p>Sheik</p></div></a>
 <a href="graphsgfys/peach.html"><div class="ig-button"><p>Peach</p></div></a>
 <a href="graphsgfys/falcon.html"><div class="ig-button"><p>Falcon</p></div></a>
 <a href="graphsgfys/doc.html"><div class="ig-button"><p>Doc</p></div></a>
 <a href="graphsgfys/luigi.html"><div class="ig-button"><p>Luigi</p></div></a>
 <a href="graphsgfys/mario.html"><div class="ig-button"><p>Mario</p></div></a>
+<a href="graphsgfys/yoshi.html"><div class="ig-button"><p>Yoshi</p></div></a>
 </div>
 
 <div id="ig-content">
@@ -68,6 +70,20 @@
 
 
 <div class="ig gfyinside2">
+
+<div class="graphcontainer media-flex">
+<img class="gfyitem" data-id="HandsomeLinedFish" />
+</div>
+<div class="ig-text">
+<p><b>Randall Timings</b> by <span class="author">lucatron</span></p>
+<p>Randall (the cloud on Yoshis), moves along a set path, and it does this within specific time intervals. This gfycat teaches you the timing of randall, by observing the timer at the top.</p>
+
+<a href="https://www.reddit.com/r/smashbros/comments/31czv2/randall_timings_explanation_in_comments/"><p style="color:#95E7D9"><b>More info</b></p></a>
+
+<a href="http://gfycat.com/HandsomeLinedFish"><div class="fullsize">Full size gfy</div></a>
+</div></div>
+
+<div class="ig gfyinside3">
 
 <div class="graphcontainer media-flex">
 <img class="gfyitem" data-id="MixedAliveAnaconda" />
