--- a/graphsgfys/sheik.html
+++ b/graphsgfys/sheik.html
@@ -56,9 +56,9 @@
 </div>
 
 <div id="ig-content">
-<div class="ig gfyinside1 media-flex">
+<div class="ig gfyinside1">
 
-<div class="graphcontainer">
+<div class="graphcontainer media-flex">
 <img class="gfyitem" data-id="WarpedMelodicClownanemonefish" />
 </div>
 <div class="ig-text">
