--- a/vidsthreads.html
+++ b/vidsthreads.html
@@ -44,6 +44,8 @@
 <div id="button-container">
 <a href="vidsthreads.html"><div class="ig-button igselected"><p>General</p></div></a>
 <a href="vidsthreads/marth.html"><div class="ig-button"><p>Marth</p></div></a>
+<a href="vidsthreads/puff.html"><div class="ig-button"><p>Puff</p></div></a>
+<a href="vidsthreads/falcon.html"><div class="ig-button"><p>Falcon</p></div></a>
 <a href="vidsthreads/doc.html"><div class="ig-button"><p>Doc/Mario</p></div></a>
 <a href="vidsthreads/yoshi.html"><div class="ig-button"><p>Yoshi</p></div></a>
 </div>
@@ -65,7 +67,7 @@
 <div class="graphcontainer"  id="vid2">
 <iframe class="vid2" width="550" height="309" src="https://www.youtube.com/embed/MOlQv-9S1zE?rel=0" frameborder="0" allowfullscreen></iframe></div>
 <div class="ig-text">
-<p><b>Melee Mechanics by Kadano | Hitbox interaction in SSBM</b> by <span class="author">Kadano</span><a href="https://www.patreon.com/kadano"><img src="assets/patreonicon.png" class="authoricon"></a><a href="https://twitter.com/kadano"><img src="assets/twittericon.png" class="authoricon"></a><a href="http://www.twitch.tv/kadano92"><img src="assets/twitchicon2.png" class="authoricon"></a></p>
+<p><b>Melee Mechanics | Hitbox interaction in SSBM</b> by <span class="author">Kadano</span><a href="https://www.patreon.com/kadano"><img src="assets/patreonicon.png" class="authoricon"></a><a href="https://twitter.com/kadano"><img src="assets/twittericon.png" class="authoricon"></a><a href="http://www.twitch.tv/kadano92"><img src="assets/twitchicon2.png" class="authoricon"></a></p>
 <p>The latest video from Kadano's Youtube series Melee Mechanics. Kadano produces incredibly high quality videos detailing the inner mechanics of melee. Each video covers a few topics, and start with core mechanics for the rest of the video to build upon and help piece together.</p>
 
 <a href="https://www.youtube.com/user/meleemechanics"><div class="fullsize">YT Channel</div></a>
@@ -73,8 +75,19 @@
 
 <div class="ig">
 
+<div class="graphcontainer"  id="vid3">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/XmlM3qkdva4?rel=0" frameborder="0" allowfullscreen></iframe></div>
+<div class="ig-text">
+<p><b>SSBM Tutorials | "Marth Killer" Tutorial</b> by <span class="author">Kira</span><a href="https://twitter.com/ssbm_kira"><img src="assets/twittericon.png" class="authoricon"></a> and <span class="author">Kellen</span><a href="https://twitter.com/kellen_ho"><img src="assets/twittericon.png" class="authoricon"></a></p>
+<p>The latest video of the SSBM Tutorials Youtube series. Kira and Kellen produce high quality tutorials for various techniques, ranging from moonwalks to full on neutral games. Kira is a top player with a tremendous amount of knowledge, and Kellen makes sure his ideas are understood in the video.</p>
+
+<a href="https://www.youtube.com/channel/UC46ZTid4t2ctB6osM0WTiJA"><div class="fullsize">YT Channel</div></a>
+</div></div>
+
+<div class="ig">
+
 <div class="graphcontainer">
-<a href="https://www.reddit.com/r/smashbros/wiki/bkam" width="550" height="385"><img src="assets/threads/movementanalysis.png" width="550" height="385" alt=""/></div></a>
+<a href="https://www.reddit.com/r/smashbros/wiki/bkam" width="550" height="385"><img src="assets/threads/bkam.png" width="550" height="385" alt=""/></div></a>
 <div class="ig-text">
 <p><b>Better Know A Matchup (BKAM)</b> by <span class="author">DJLO</span></p>
 <p>A massive collection of character specific gifs+gfys for every character, detailing crucial tech and attributes. Each gif packaged with a discussion thread.</p>
