--- a/vidsthreads/doc.html
+++ b/vidsthreads/doc.html
@@ -44,6 +44,8 @@
 <div id="button-container">
 <a href="vidsthreads.html"><div class="ig-button"><p>General</p></div></a>
 <a href="vidsthreads/marth.html"><div class="ig-button"><p>Marth</p></div></a>
+<a href="vidsthreads/puff.html"><div class="ig-button"><p>Puff</p></div></a>
+<a href="vidsthreads/falcon.html"><div class="ig-button"><p>Falcon</p></div></a>
 <a href="vidsthreads/doc.html"><div class="ig-button igselected"><p>Doc/Mario</p></div></a>
 <a href="vidsthreads/yoshi.html"><div class="ig-button"><p>Yoshi</p></div></a>
 </div>
