--- a/vidsthreads/puff.html
+++ b/vidsthreads/puff.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="utf-8">
 <base href="../">
-<script>var noofgfys = 2;var ratios = [(472/1102),(1242/1966)];</script>
 <link href='http://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
 <script>
@@ -36,56 +35,34 @@
 	<a href="http://facebook.com/IKneeData"><div class="socialmedia" style="background-image:url(assets/facebooklogo.png)"></div></a></div>
 
 </div>
-<div id="pagetitle" style="background-color:#5294C9">
-<h1>Graphs & Gfys</h1>
+<div id="pagetitle" style="background-color:#4FB994">
+<h1>Vids & Threads</h1>
 </div>
 <div id="main">
 <div id="main-content">
 <div id="infographmain">
 <div id="button-container">
-<a href="graphsgfys.html"><div class="ig-button"><p>General</p></div></a>
-<a href="graphsgfys/marth.html"><div class="ig-button"><p>Marth</p></div></a>
-<a href="graphsgfys/sheik.html"><div class="ig-button"><p>Sheik</p></div></a>
-<a href="graphsgfys/peach.html"><div class="ig-button"><p>Peach</p></div></a>
-<a href="graphsgfys/falcon.html"><div class="ig-button"><p>Falcon</p></div></a>
-<a href="graphsgfys/doc.html"><div class="ig-button"><p>Doc</p></div></a>
-<a href="graphsgfys/luigi.html"><div class="ig-button"><p>Luigi</p></div></a>
-<a href="graphsgfys/mario.html"><div class="ig-button"><p>Mario</p></div></a>
-<a href="graphsgfys/yoshi.html"><div class="ig-button igselected"><p>Yoshi</p></div></a>
+<a href="vidsthreads.html"><div class="ig-button"><p>General</p></div></a>
+<a href="vidsthreads/marth.html"><div class="ig-button"><p>Marth</p></div></a>
+<a href="vidsthreads/puff.html"><div class="ig-button igselected"><p>Puff</p></div></a>
+<a href="vidsthreads/falcon.html"><div class="ig-button"><p>Falcon</p></div></a>
+<a href="vidsthreads/doc.html"><div class="ig-button"><p>Doc/Mario</p></div></a>
+<a href="vidsthreads/yoshi.html"><div class="ig-button"><p>Yoshi</p></div></a>
 </div>
 
 <div id="ig-content">
-<div class="ig gfyinside1">
+  <div class="ig">
 
-<div class="graphcontainer media-flex">
-<img class="gfyitem" data-id="FearfulPreciousKoalabear" />
-</div>
-<div class="ig-text">
-<p><b>Yoshi Egg Throw Angles</b> by <span class="author">lucatron</span></p>
-<p>This gfycat visualises all possible angles of Yoshi's Egg Throw. Only 1 strength value is used (full strength) for this, and gives a total of 61 different angles.</p>
+  <div class="graphcontainer"  id="vid1">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/M_GtSHM6fHA?rel=0" frameborder="0" allowfullscreen></iframe></div>
+  <div class="ig-text">
+  <p><b>Meteor Cancel to Rest</b> by <span class="author">gomezisdan</span><a href="https://twitter.com/gomezisdan"><img src="assets/twittericon.png" class="authoricon"></a></p>
+  <p>The latest video of gomezisdan's youtube series, Jigglypuff Tutorials, in which Dan teaches you unexplored jigglypuff techniques. Dan presents his tutorials with superb video editing.</p>
+  <a href="https://www.youtube.com/c/jigglypufftutorials"><div class="fullsize">YT Channel</div></a>
+  </div></div>
 
-<a href="https://www.reddit.com/r/smashbros/comments/2zt2pz/yoshi_egg_throw_angles_info_in_comments/"><p style="color:#95E7D9"><b>More info</b></p></a>
-
-
-<a href="http://gfycat.com/FearfulPreciousKoalabear"><div class="fullsize">Full size gfy</div></a>
-</div></div>
-
-<div class="ig gfyinside2">
-
-<div class="graphcontainer media-flex">
-<img class="gfyitem" data-id="UncomfortableSaltyIndianhare" />
-</div>
-<div class="ig-text">
-<p><b>Yoshi Egg Throw Strengths</b> by <span class="author">lucatron</span></p>
-<p>Instead of Egg Throw Angles, this gfycat visualises all possible Egg Throw strengths. Giving a total of 17 different strengths. This gfycat only shows 3 out of the 61 possible angles, showing 51 different trajectories out of a possible 1037 trajectories.</p>
-
-<a href="https://www.reddit.com/r/smashbros/comments/33rr60/yoshi_egg_throw_strengths/"><p style="color:#95E7D9"><b>More info</b></p></a>
-
-<a href="http://gfycat.com/UncomfortableSaltyIndianhare"><div class="fullsize">Full size gfy</div></a>
-</div></div>
 </div>
 </div>
-
 
 
 
@@ -113,5 +90,6 @@
 </div>
 </div>
 
+</div>
 </div></body>
 </html>
