--- a/graphsgfys.html
+++ b/graphsgfys.html
@@ -83,6 +83,17 @@
 <a href="http://gfycat.com/HandsomeLinedFish"><div class="fullsize">Full size gfy</div></a>
 </div></div>
 
+<div class="ig">
+
+<div class="graphcontainer">
+  <img src="assets/infographs/inputmap.png"></div>
+<div class="ig-text">
+<p><b>Control Stick Input-Output Maps</b> by <span class="author">Kadano</span><a href="https://www.patreon.com/kadano"><img src="assets/patreonicon.png" class="authoricon"></a><a href="https://twitter.com/kadano"><img src="assets/twittericon.png" class="authoricon"></a><a href="http://www.twitch.tv/kadano92"><img src="assets/twitchicon2.png" class="authoricon"></a></p>
+<p>These maps show precisely what movement/attack is triggered at varying points of the control stick, each map representing a different state the character is in. Click Full album below to see the complete set.</p>
+
+<a href="http://imgur.com/a/2na5b"><div class="fullsize">Full album</div></a>
+</div></div>
+
 <div class="ig gfyinside3">
 
 <div class="graphcontainer media-flex">
