--- a/graphsgfys/marth.html
+++ b/graphsgfys/marth.html
@@ -63,6 +63,7 @@
 <div class="ig-text">
 <p><b>Dancing Blade Attack Options</b> by <span class="author">lucatron</span></p>
 
+<p>This gfycat displays all of Marth's options during his side-B dancing blade attack, with the corresponding input.</p>
 
 <a href="http://gfycat.com/UnsungImpressionableApe"><div class="fullsize">Full size gfy</div></a>
 </div></div></div>
