--- a/vidsthreads/peach.html
+++ b/vidsthreads/peach.html
@@ -44,9 +44,9 @@
 <div id="button-container">
 <a href="vidsthreads.html"><div class="ig-button"><p>General</p></div></a>
 <a href="vidsthreads/fox.html"><div class="ig-button"><p>Fox</p></div></a>
-<a href="vidsthreads/marth.html"><div class="ig-button igselected"><p>Marth</p></div></a>
+<a href="vidsthreads/marth.html"><div class="ig-button"><p>Marth</p></div></a>
 <a href="vidsthreads/puff.html"><div class="ig-button"><p>Puff</p></div></a>
-<a href="vidsthreads/peach.html"><div class="ig-button"><p>Peach</p></div></a>
+<a href="vidsthreads/peach.html"><div class="ig-button igselected"><p>Peach</p></div></a>
 <a href="vidsthreads/falcon.html"><div class="ig-button"><p>Falcon</p></div></a>
 <a href="vidsthreads/doc.html"><div class="ig-button"><p>Doc/Mario</p></div></a>
 <a href="vidsthreads/ganon.html"><div class="ig-button"><p>Ganon</p></div></a>
@@ -55,16 +55,15 @@
 
 <div id="ig-content">
 
-<div class="ig">
+  <div class="ig">
 
-<div class="graphcontainer">
-<a href="http://smashboards.com/threads/kadano%E2%80%99s-perfect-marth-class%E2%80%94advanced-frame-data-application.337035/"><img src="assets/threads/perfectmarthclass.jpg" width="550" height="385" alt=""/></div></a>
-<div class="ig-text">
-<p><b>Kadano's Perfect Marth Class</b> by <span class="author">Kadano</span><a href="https://www.patreon.com/kadano"><img src="assets/patreonicon.png" class="authoricon"></a><a href="https://twitter.com/kadano"><img src="assets/twittericon.png" class="authoricon"></a><a href="http://www.twitch.tv/kadano92"><img src="assets/twitchicon2.png" class="authoricon"></a></p>
-<p>The definitive frame data guide! Kadano's Perfect Marth Class is the best frame data application guide available, and should be bookmarked by every Marth main. The Class does not just explain how an AT works, but instead explains how it works in common situations, and concludes the most optimal method for each topic. Kadano does all this with high quality edited gfys and images.</p>
-
-<a href="http://smashboards.com/threads/kadano%E2%80%99s-perfect-marth-class%E2%80%94advanced-frame-data-application.337035/"><div class="fullsize">Full thread</div></a>
-</div></div></div>
+  <div class="graphcontainer"  id="vid1">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/zvNgmahChOM?rel=0" frameborder="0" allowfullscreen></iframe></div>
+  <div class="ig-text">
+  <p><b>Advanced Peach Tutorial</b> by <span class="author">MacD</span><a href="https://twitter.com/macdsmash"><img src="assets/twittericon.png" class="authoricon"></a><a href="http://www.twitch.tv/macdsmash"><img class="authoricon" src="assets/twitchicon2.png"></a></p>
+  <p>An in depth tutorial of all the important peach tech, including all her unique mechanics. Created by one of the greatest peach players in the world.</p>
+  <a href="https://www.youtube.com/user/MacDsmash"><div class="fullsize">YT Channel</div></a>
+  </div></div></div>
 </div>
 
 
@@ -93,5 +92,6 @@
 </div>
 </div>
 
+</div>
 </div></body>
 </html>
