--- a/vidsthreads/ganon.html
+++ b/vidsthreads/ganon.html
@@ -44,12 +44,12 @@
 <div id="button-container">
 <a href="vidsthreads.html"><div class="ig-button"><p>General</p></div></a>
 <a href="vidsthreads/fox.html"><div class="ig-button"><p>Fox</p></div></a>
-<a href="vidsthreads/marth.html"><div class="ig-button igselected"><p>Marth</p></div></a>
+<a href="vidsthreads/marth.html"><div class="ig-button"><p>Marth</p></div></a>
 <a href="vidsthreads/puff.html"><div class="ig-button"><p>Puff</p></div></a>
 <a href="vidsthreads/peach.html"><div class="ig-button"><p>Peach</p></div></a>
 <a href="vidsthreads/falcon.html"><div class="ig-button"><p>Falcon</p></div></a>
 <a href="vidsthreads/doc.html"><div class="ig-button"><p>Doc/Mario</p></div></a>
-<a href="vidsthreads/ganon.html"><div class="ig-button"><p>Ganon</p></div></a>
+<a href="vidsthreads/ganon.html"><div class="ig-button igselected"><p>Ganon</p></div></a>
 <a href="vidsthreads/yoshi.html"><div class="ig-button"><p>Yoshi</p></div></a>
 </div>
 
@@ -58,12 +58,12 @@
 <div class="ig">
 
 <div class="graphcontainer">
-<a href="http://smashboards.com/threads/kadano%E2%80%99s-perfect-marth-class%E2%80%94advanced-frame-data-application.337035/"><img src="assets/threads/perfectmarthclass.jpg" width="550" height="385" alt=""/></div></a>
+<a href="http://showdown.gg/category/games/ssb/"><img src="assets/threads/ganonguide.png" width="550" height="385" alt=""/></div></a>
 <div class="ig-text">
-<p><b>Kadano's Perfect Marth Class</b> by <span class="author">Kadano</span><a href="https://www.patreon.com/kadano"><img src="assets/patreonicon.png" class="authoricon"></a><a href="https://twitter.com/kadano"><img src="assets/twittericon.png" class="authoricon"></a><a href="http://www.twitch.tv/kadano92"><img src="assets/twitchicon2.png" class="authoricon"></a></p>
-<p>The definitive frame data guide! Kadano's Perfect Marth Class is the best frame data application guide available, and should be bookmarked by every Marth main. The Class does not just explain how an AT works, but instead explains how it works in common situations, and concludes the most optimal method for each topic. Kadano does all this with high quality edited gfys and images.</p>
+<p><b>Ganondorf Guide of Advanced Techniques</b> by <span class="author">Bizzaro Flame</span><a href="https://twitter.com/bizzarro_flame"><img class="authoricon" src="assets/twittericon.png"></a><a href="http://www.twitch.tv/bizzarro_flame"><img class="authoricon" src="assets/twitchicon2.png"></a></p>
+<p>A 4 part guide explaining how and when to use ganon's advanced tech, writen by one of the greatest ganon mains around. Complete with gfy examples and guides.</p>
 
-<a href="http://smashboards.com/threads/kadano%E2%80%99s-perfect-marth-class%E2%80%94advanced-frame-data-application.337035/"><div class="fullsize">Full thread</div></a>
+<a href="http://showdown.gg/category/games/ssb/"><div class="fullsize">Full thread</div></a>
 </div></div></div>
 </div>
 
@@ -93,5 +93,6 @@
 </div>
 </div>
 
+</div>
 </div></body>
 </html>
