--- a/vidsthreads.html
+++ b/vidsthreads.html
@@ -23,9 +23,9 @@
 
 <body>
 <div id="header">
-	<a href="index.html"><img id="logo" src="assets/kneesmalllogo.png" width="40" height="40" alt=""/></a>
-    <a href="index.html"><img id="titlelogo" src="assets/ikneedatav5.png"/ width="280" height="60"></a>
-		<a href="index.html"><div class="button"><h4>Blog</h4></div></a>
+	<a href="http://ikneedata.com"><img id="logo" src="assets/kneesmalllogo.png" width="40" height="40" alt=""/></a>
+    <a href="http://ikneedata.com"><img id="titlelogo" src="assets/ikneedatav5.png"/ width="280" height="60"></a>
+		<a href="http://ikneedata.com"><div class="button"><h4>Blog</h4></div></a>
 	<a href="heatmaps/oos/falcon.html"><div class="button"><h4>Heatmaps</h4></div></a>
     <a href="graphsgfys.html"><div class="button longbutton"><h4>Graphs & Gfys</h4></div></a>
     <a href="vidsthreads.html"><div class="button longbutton"><h4>Vids & Threads</h4></div></a>
