--- a/about.html
+++ b/about.html
@@ -26,11 +26,11 @@
 	<a href="http://ikneedata.com"><img id="logo" src="assets/kneesmalllogo.png" width="40" height="40" alt=""/></a>
     <a href="http://ikneedata.com"><img id="titlelogo" src="assets/ikneedatav5.png"/ width="280" height="60"></a>
 	<a href="http://ikneedata.com"><div class="button"><h4>Blog</h4></div></a>
-	<a href="heatmaps/oos/falcon"><div class="button"><h4>Heatmaps</h4></div></a>
-    <a href="graphsgfys"><div class="button longbutton"><h4>Graphs & Gfys</h4></div></a>
-    <a href="vidsthreads"><div class="button longbutton"><h4>Vids & Threads</h4></div></a>
-	<a href="donate"><div class="button"><h4>Donate</h4></div></a>
-	<a href="about"><div class="button"><h4>About</h4></div></a>
+	<a href="heatmaps/oos/falcon.html"><div class="button"><h4>Heatmaps</h4></div></a>
+  <a href="graphsgfys.html"><div class="button longbutton"><h4>Graphs & Gfys</h4></div></a>
+  <a href="vidsthreads.html"><div class="button longbutton"><h4>Vids & Threads</h4></div></a>
+	<a href="donate.html"><div class="button"><h4>Donate</h4></div></a>
+	<a href="about.html"><div class="button"><h4>About</h4></div></a>
 	<div id="socialmediaicons"><a href="http://twitter.com/IKneeData"><div class="socialmedia" style="background-image:url(assets/twitterlogo.png)"></div></a>
 	<a href="http://facebook.com/IKneeData"><div class="socialmedia" style="background-image:url(assets/facebooklogo.png)"></div></a></div>
 
