--- a/heatmaps/oos/falcon.html
+++ b/heatmaps/oos/falcon.html
@@ -43,14 +43,13 @@
 	<a href="http://facebook.com/IKneeData"><div class="socialmedia" style="background-image:url(assets/facebooklogo.png)"></div></a></div>
 </div>
 <div id="pagetitle" style="background-color:#5F369F">
-<h1>Heatmaps <img id="heatmapinfo" src="assets/question.png" style="height:22px; width:22px; border-radius:15px;"/></h1>
+<h1>Heatmaps <img id="heatmapinfo" src="assets/question.png" style="height:22px; width:22px; border-radius:15px;"/><div id="sharebuttoncontainer"><div class="fb-share-button" data-href="https://ikneedata.com/heatmaps/oos/falcon" data-layout="button_count"></div></div></h1>
 
 <div id="heatmapinfobox"><p>Heatmaps display the speed of all the character's attacks from a certain position. The coloured shapes represent the possible hitboxes of each attack, where the colour represents the frame that it comes out. All smash games run at 60 frames per second. Red and yellow hitboxes are very fast, but green and blue are slower.</p>
 	<p>You can toggle each attack, or each frame (colour) individually, to allow you to see only the options you want. You can also play an animation of your selected hitboxes in real game speed (60fps) to get a feel for how fast each option is.</p>
 	<p>Using the hurtbox controls, you can move around a custom opponent hurtbox to greater visualise hitbox range.</p>
 	<p>Hovering over the buttons will highlight (darkens them) the button's respective hitboxes.</p>
-</div><div class="fb-share-button" data-href="https://ikneedata.com/heatmaps/oos/falcon" data-layout="button_count"></div>
-</div><div id="main">
+</div></div><div id="main">
 <div id="main-content">
 	<div id="control-container">
     <div id="top-controls">
