--- a/heatmaps/oos/falcon.html
+++ b/heatmaps/oos/falcon.html
@@ -46,10 +46,10 @@
 	<div id="control-container">
     <div id="top-controls">
     	<div class="noa control nohelp" id="heatmaptype"><p>OoS</p>
-        <div id="hmtypedropdown" class="dropdown"><div class="noa control hmtype nohelp">Coming Soon</div></div></div>
+        <div id="hmtypedropdown" class="dropdown" style="display:none"><div class="noa control hmtype nohelp">Coming Soon</div></div></div>
 		<div class="noa control nohelp" id="characterbutton"><p>
 Falcon</p>
-<div id="chardropdown" class"dropdown">
+<div id="chardropdown" class"dropdown" style="display:none">
 	<a href="heatmaps/oos/fox.html"><div class="noa control character nohelp"><p>Fox</p></div></a>
 	<a href="heatmaps/oos/falco.html"><div class="noa control character nohelp"><p>Falco</p></div></a>
 	<a href="heatmaps/oos/marth.html"><div class="noa control character nohelp"><p>Marth</p></div></a>
