--- a/donate.html
+++ b/donate.html
@@ -5,7 +5,6 @@
 <base href="">
 <link href='http://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
-<link href="contentsheet.css" rel="stylesheet" type="text/css">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -16,8 +15,7 @@
   ga('send', 'pageview');
 
 </script>
-<script src="jquery-1.11.3.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="dresize.js"></script>
+<script src="jquery-1.11.3.js" type="text/javascript"></script>
 <script type="text/javascript" src="script.js"></script>
 <link rel="shortcut icon" href="favicon.ico" />
 <title>I KneeData | For your frame data kneeds</title>
@@ -58,15 +56,14 @@
 			<img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
 		</form>
 		<div>
-      <p><img src="assets/bitcoinicon.png" style="margin-right:10px"><span style="font-size:12px">3CZzEPp5d2xf8NpgK8nJXDTqd9vZgRTPgU</span></p>
 			<p><br>Donations will:</p>
 			<ul>
-				<li>Give you access to beta builds of new features (3$ or more)</li>
+				<li>Give you access to beta builds of new features (1$ or more)</li>
     		<li>Drive the site and brand forward</li>
 				<li>Potentially allow the site to become ad free</li>
 			</ul>
-			<p><span style="font-size:15px">Site suggestions made by donaters will be taken very seriously and I will discuss them with you.</span></p>
-			<p><span style="font-size:12px"><br>For benefits: Please provide preferred contact details in donation message, otherwise paypal associated email address will be used. If using bitcoin, use a memo if possible, or send me a PM with proof of transaction.</span></p>
+			<p>Site suggestions made by donaters will be taken very seriously and I will discuss them with you.</p>
+			<p><span style="font-size:12px">Please provide preferred contact details in donation message, otherwise paypal associated email address will be used</span></p>
 			<p><br>Thank You!<br></p>
 		</div>
 	</div>
