--- a/graphsgfys.html
+++ b/graphsgfys.html
@@ -5,10 +5,6 @@
 <base href="">
 <link href='http://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
-<link href="contentsheet.css" rel="stylesheet" type="text/css">
-<style>
-
-</style>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -20,10 +16,8 @@
 
 </script>
 <script>var noofgfys = 3;var ratios = [(412/550),(568/1600),(500/522)];</script>
-<script src="jquery-1.11.3.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="ggresize.js"></script>
+<script src="jquery-1.11.3.js" type="text/javascript"></script>
 <script type="text/javascript" src="script.js"></script>
-<script type="text/javascript" src="graphsgfysscript.js"></script>
 <link rel="shortcut icon" href="favicon.ico" />
 <title>I KneeData | For your frame data kneeds</title>
 </head>
