--- a/graphsgfys/yoshi.html
+++ b/graphsgfys/yoshi.html
@@ -6,7 +6,6 @@
 <script>var noofgfys = 2;var ratios = [(472/1102),(1242/1966)];</script>
 <link href='http://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
-<link href="contentsheet.css" rel="stylesheet" type="text/css">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -17,10 +16,8 @@
   ga('send', 'pageview');
 
 </script>
-<script src="jquery-1.11.3.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="ggresize.js"></script>
+<script src="jquery-1.11.3.js" type="text/javascript"></script>
 <script type="text/javascript" src="script.js"></script>
-<script type="text/javascript" src="graphsgfysscript.js"></script>
 <link rel="shortcut icon" href="favicon.ico" />
 <title>I KneeData | For your frame data kneeds</title>
 </head>
