--- a/heatmaps/oos/ics.html
+++ b/heatmaps/oos/ics.html
@@ -5,7 +5,6 @@
 <base href="../../">
 <link href='http://fonts.googleapis.com/css?family=Slabo+27px|Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
-<link href="heatmapsheet.css" rel="stylesheet" type="text/css">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -16,10 +15,8 @@
   ga('send', 'pageview');
 
 </script>
-<script src="jquery-1.11.3.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="hresize.js"></script>
+<script src="jquery-1.11.3.js" type="text/javascript"></script>
 <script type="text/javascript" src="script.js"></script>
-<script type="text/javascript" src="heatmapscript.js"></script>
 <link rel="shortcut icon" href="favicon.ico" />
 <title>I KneeData | For your frame data kneeds</title>
 </head>
