--- a/vidsthreads/puff.html
+++ b/vidsthreads/puff.html
@@ -5,7 +5,6 @@
 <base href="../">
 <link href='http://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
-<link href="contentsheet.css" rel="stylesheet" type="text/css">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -16,10 +15,8 @@
   ga('send', 'pageview');
 
 </script>
-<script src="jquery-1.11.3.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="vtresize.js"></script>
+<script src="jquery-1.11.3.js" type="text/javascript"></script>
 <script type="text/javascript" src="script.js"></script>
-<script type="text/javascript" src="vidsthreadsscript.js"></script>
 <link rel="shortcut icon" href="favicon.ico" />
 <title>I KneeData | For your frame data kneeds</title>
 </head>
@@ -28,7 +25,7 @@
 <div id="header">
 	<a href="http://ikneedata.com"><img id="logo" src="assets/kneesmalllogo.png" width="40" height="40" alt=""/></a>
     <a href="http://ikneedata.com"><img id="titlelogo" src="assets/ikneedatav5.png"/ width="280" height="60"></a>
-	<a href="http://ikneedata.com"><div class="button"><h4>Blog</h4></div></a>
+	<!--<h3 id = "title">I KneeData</h3> ---><a href="http://ikneedata.com"><div class="button"><h4>Blog</h4></div></a>
 	<a href="heatmaps/oos/falcon.html"><div class="button"><h4>Heatmaps</h4></div></a>
     <a href="graphsgfys.html"><div class="button longbutton"><h4>Graphs & Gfys</h4></div></a>
     <a href="vidsthreads.html"><div class="button longbutton"><h4>Vids & Threads</h4></div></a>
